# Bank-and-transaction-management-system

./: .gitignore  .replit  README.md  documents.md  package-lock.json  package.json  pyproject.toml
.local/state/scribe/: scribe.db-shm  scribe.db-wal
.local/state/workflow-logs/0JpNvcDKnYSI8PPEvAr6h/: backend.shell.exec.0
.local/state/workflow-logs/JG5BHGXIq3MzNHZxQrLT0/: frontend.shell.exec.0
.local/state/workflow-logs/Uqjt6l1AC4CgBu5qgrTxI/: backend.shell.exec.0
.local/state/workflow-logs/Z_NuGkWFoXXAoOf4-aAcS/: backend.shell.exec.0
backend/: .env.example  main.py  requirements.txt  start.sh
backend/core/: config.py  security.py
backend/database/: connection.py
backend/models/: account.py  transaction.py  user.py
backend/routes/: accounts.py  admin.py  auth.py  charts.py  notifications.py  ws.py
backend/services/: account_service.py  audit_service.py  auth_service.py  cache_service.py  fraud_service.py  notification_service.py  transaction_service.py  ws_manager.py
frontend/: .env.example  index.html  netlify.toml  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Charts.jsx  Layout.jsx  Navbar.css  Navbar.jsx  NotificationBell.css  NotificationBell.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useRealtime.js
frontend/src/pages/: Accounts.jsx  Admin.css  Admin.jsx  Auth.css  Dashboard.css  Dashboard.jsx  Login.jsx  Register.jsx  Transactions.css  Transactions.jsx  Transfer.css  Transfer.jsx
frontend/src/services/: api.js
(+2 files in other folders)
