[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib==3.0.1",
    "bcrypt==4.1.3",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "motor==3.3.2",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.2.1",
    "pydantic[email]>=2.13.3",
    "pymongo==4.6.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis==5.0.4",
    "uvicorn[standard]==0.29.0",
    "websockets==12.0",
]
